[gd_scene load_steps=11 format=3 uid="uid://bp2j6msvl68rr"]

[ext_resource type="Shader" path="res://Shaders/flash.gdshader" id="1_3lx7d"]
[ext_resource type="Script" path="res://Scenes/code_red_boss.gd" id="1_wq4ci"]
[ext_resource type="PackedScene" uid="uid://bw4lnil0db42v" path="res://Scenes/status_effects_bar.tscn" id="3_axqje"]
[ext_resource type="Texture2D" uid="uid://bxpns5vbwhnq3" path="res://Images/Characters/code_red.png" id="3_o62l0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u0t6p"]
resource_local_to_scene = true
shader = ExtResource("1_3lx7d")
shader_parameter/flash_color = Vector4(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w0f3n"]
shader = ExtResource("1_3lx7d")
shader_parameter/flash_color = Vector4(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1hhmy"]
size = Vector2(78, 46)

[sub_resource type="Animation" id="Animation_u33qg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vgkkp"]
resource_name = "default"
length = 0.3
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qpb85"]
_data = {
"RESET": SubResource("Animation_u33qg"),
"default": SubResource("Animation_vgkkp")
}

[node name="CodeRedBoss" type="Area2D"]
material = SubResource("ShaderMaterial_u0t6p")
rotation = 3.14159
collision_layer = 2
collision_mask = 4
script = ExtResource("1_wq4ci")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_w0f3n")
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_o62l0")
hframes = 2

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_1hhmy")

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qpb85")
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="PassiveTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AfterImageTimer" type="Timer" parent="."]
wait_time = 0.02

[node name="hp" type="Label" parent="."]
offset_left = 19.0
offset_top = -41.0
offset_right = 59.0
offset_bottom = -25.0
rotation = 3.14159
text = "hp"
horizontal_alignment = 1

[node name="StatusEffectsBar" parent="." instance=ExtResource("3_axqje")]
offset_top = -93.0
offset_bottom = -63.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="PassiveTimer" to="." method="_on_passive_timer_timeout"]
[connection signal="timeout" from="AfterImageTimer" to="." method="_on_after_image_timer_timeout"]
